[gd_scene load_steps=36 format=3 uid="uid://bm16kr8n2wpnq"]

[ext_resource type="Script" path="res://Scripts/Core/world_map.gd" id="1_2s807"]
[ext_resource type="Script" path="res://Scripts/Core/WorldMapLevel.gd" id="2_aqxei"]
[ext_resource type="Texture2D" uid="uid://hqkduoyy3y6l" path="res://Imports/WorldMap/map.png" id="2_kxnka"]
[ext_resource type="Texture2D" uid="uid://dptir5w0jxx08" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 01.png" id="2_ucvp2"]
[ext_resource type="Texture2D" uid="uid://v0ua7xvlt6m" path="res://Imports/WorldMap/cross.png" id="3_6h2wy"]
[ext_resource type="Texture2D" uid="uid://dvq8bo6jdms7h" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 02.png" id="3_53bgm"]
[ext_resource type="Texture2D" uid="uid://vj0a3r7w8e7c" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 03.png" id="4_seb6a"]
[ext_resource type="Texture2D" uid="uid://dcgkyopmhwb6i" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 04.png" id="5_6q3b4"]
[ext_resource type="Texture2D" uid="uid://cw6i70b5ei5fd" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 05.png" id="6_gmlc5"]
[ext_resource type="Texture2D" uid="uid://cr7kpsqg0bota" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 01.png" id="7_ht0up"]
[ext_resource type="Texture2D" uid="uid://dpjxnwmjjq1bm" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 02.png" id="8_adngh"]
[ext_resource type="Texture2D" uid="uid://cpb48r81xsu1q" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 03.png" id="9_phq53"]
[ext_resource type="Texture2D" uid="uid://do5cgd10my1w8" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 04.png" id="10_u25fm"]
[ext_resource type="Texture2D" uid="uid://b58vj87v7j2wv" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 05.png" id="11_csn06"]
[ext_resource type="Texture2D" uid="uid://pr45ypwnc2yw" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 06.png" id="12_fccis"]
[ext_resource type="Texture2D" uid="uid://c52vxbi8vukp3" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 01.png" id="13_beq8l"]
[ext_resource type="Texture2D" uid="uid://b0atqgsrnfhu6" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 02.png" id="14_ndoym"]
[ext_resource type="Texture2D" uid="uid://bh343hus1k5hj" path="res://Imports/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 03.png" id="15_lojni"]

[sub_resource type="Animation" id="Animation_3tqyf"]
resource_name = "IDLE"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_ucvp2"), ExtResource("3_53bgm"), ExtResource("4_seb6a"), ExtResource("5_6q3b4"), ExtResource("6_gmlc5")]
}

[sub_resource type="Animation" id="Animation_k0427"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ucvp2")]
}

[sub_resource type="Animation" id="Animation_3ofim"]
resource_name = "RUN"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.366667, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_ht0up"), ExtResource("8_adngh"), ExtResource("9_phq53"), ExtResource("10_u25fm"), ExtResource("11_csn06"), ExtResource("12_fccis")]
}

[sub_resource type="Animation" id="Animation_vcjj0"]
resource_name = "SELECT"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("13_beq8l"), ExtResource("14_ndoym"), ExtResource("15_lojni")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vv04r"]
_data = {
"IDLE": SubResource("Animation_3tqyf"),
"RESET": SubResource("Animation_k0427"),
"RUN": SubResource("Animation_3ofim"),
"SELECT": SubResource("Animation_vcjj0")
}

[sub_resource type="Theme" id="Theme_gl8de"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpuoo"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybjsw"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1hu6"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfpqg"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3wyg"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1x60b"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6d11g"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mrror"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v01fl"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylkx2"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3o7dq"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[node name="WorldMap" type="Node2D"]
position = Vector2(3, 0)
script = ExtResource("1_2s807")

[node name="BGColour" type="ColorRect" parent="."]
offset_left = -784.0
offset_top = -493.0
offset_right = -384.0
offset_bottom = -93.0
scale = Vector2(10, 10)
color = Color(0.572549, 0.662745, 0.807843, 1)

[node name="Background" type="TextureRect" parent="."]
offset_left = -180.0
offset_top = -119.0
offset_right = 1100.0
offset_bottom = 601.0
texture = ExtResource("2_kxnka")

[node name="Label" type="Label" parent="."]
offset_left = 203.0
offset_top = 23.0
offset_right = 275.0
offset_bottom = 46.0

[node name="LevelHolder" type="Node" parent="."]

[node name="Level1" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("right")]
position = Vector2(3, 0)
script = ExtResource("2_aqxei")
right = NodePath("../Level2")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level1"]
position = Vector2(174, 89)
texture = ExtResource("3_6h2wy")

[node name="LabelL1" type="Label" parent="LevelHolder/Level1"]
offset_left = 309.0
offset_top = 78.0
offset_right = 349.0
offset_bottom = 101.0

[node name="Level2" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("left")]
position = Vector2(3, 0)
script = ExtResource("2_aqxei")
left = NodePath("../Level1")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level2"]
position = Vector2(176, 182)
texture = ExtResource("3_6h2wy")

[node name="LabelL2" type="Label" parent="LevelHolder/Level2"]
offset_left = 310.0
offset_top = 167.0
offset_right = 350.0
offset_bottom = 190.0

[node name="Level3" type="Node2D" parent="LevelHolder"]
position = Vector2(3, 0)
script = ExtResource("2_aqxei")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level3"]
position = Vector2(179, 278)
texture = ExtResource("3_6h2wy")

[node name="LabelL3" type="Label" parent="LevelHolder/Level3"]
offset_left = 299.0
offset_top = 269.0
offset_right = 339.0
offset_bottom = 292.0

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(-1259, 340)
texture = ExtResource("2_ucvp2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_vv04r")
}

[node name="ButtonHolder" type="Node" parent="."]

[node name="Level1" type="Button" parent="ButtonHolder"]
offset_left = 211.0
offset_top = 75.0
offset_right = 273.0
offset_bottom = 106.0
text = "Level 1"

[node name="Level2" type="Button" parent="ButtonHolder"]
offset_left = 214.0
offset_top = 165.0
offset_right = 276.0
offset_bottom = 196.0
text = "Level 2"

[node name="Level3" type="Button" parent="ButtonHolder"]
offset_left = 211.0
offset_top = 266.0
offset_right = 273.0
offset_bottom = 297.0
text = "Level 3"

[node name="Login" type="Button" parent="ButtonHolder"]
offset_left = 207.0
offset_top = 358.0
offset_right = 282.0
offset_bottom = 389.0
text = "Login
"

[node name="Logout" type="Button" parent="ButtonHolder"]
offset_left = 875.0
offset_top = 8.0
offset_right = 950.0
offset_bottom = 39.0
text = "Logout
"

[node name="Register" type="Button" parent="ButtonHolder"]
offset_left = 328.0
offset_top = 359.0
offset_right = 400.0
offset_bottom = 390.0
text = "Register
"

[node name="Leaderboard1" type="Button" parent="ButtonHolder"]
offset_left = 531.0
offset_top = 73.0
offset_right = 631.0
offset_bottom = 96.0
theme = SubResource("Theme_gl8de")
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_dpuoo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_ybjsw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_p1hu6")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_vfpqg")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_x3wyg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_1x60b")
theme_override_styles/hover = SubResource("StyleBoxFlat_6d11g")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_mrror")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v01fl")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_ylkx2")
theme_override_styles/normal = SubResource("StyleBoxFlat_3o7dq")
text = "Leaderboard
"

[node name="Leaderboard2" type="Button" parent="ButtonHolder"]
offset_left = 532.0
offset_top = 163.0
offset_right = 632.0
offset_bottom = 186.0
theme = SubResource("Theme_gl8de")
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_dpuoo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_ybjsw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_p1hu6")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_vfpqg")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_x3wyg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_1x60b")
theme_override_styles/hover = SubResource("StyleBoxFlat_6d11g")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_mrror")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v01fl")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_ylkx2")
theme_override_styles/normal = SubResource("StyleBoxFlat_3o7dq")
text = "Leaderboard"

[node name="Leaderboard3" type="Button" parent="ButtonHolder"]
offset_left = 531.0
offset_top = 267.0
offset_right = 631.0
offset_bottom = 290.0
theme = SubResource("Theme_gl8de")
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_dpuoo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_ybjsw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_p1hu6")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_vfpqg")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_x3wyg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_1x60b")
theme_override_styles/hover = SubResource("StyleBoxFlat_6d11g")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_mrror")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v01fl")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_ylkx2")
theme_override_styles/normal = SubResource("StyleBoxFlat_3o7dq")
text = "Leaderboard
"

[node name="UIManager" type="CanvasLayer" parent="."]
process_mode = 3

[node name="PauseMenu" type="ColorRect" parent="UIManager"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -75.0
offset_right = 200.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.286275, 0.286275, 0.65098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UIManager/PauseMenu"]
layout_mode = 0
offset_top = 10.0
offset_right = 120.0
offset_bottom = 150.0

[node name="HBoxContainer1" type="HBoxContainer" parent="UIManager/PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="name" type="Label" parent="UIManager/PauseMenu/VBoxContainer/HBoxContainer1"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UIManager/PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="name" type="Label" parent="UIManager/PauseMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="UIManager/PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="name" type="Label" parent="UIManager/PauseMenu/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="UIManager/PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Quit" type="Button" parent="UIManager/PauseMenu/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "Quit
"

[node name="VBoxContainer2" type="VBoxContainer" parent="UIManager/PauseMenu"]
layout_mode = 0
offset_left = 179.0
offset_top = 9.0
offset_right = 400.0
offset_bottom = 150.0

[node name="HBoxContainer1" type="HBoxContainer" parent="UIManager/PauseMenu/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="time" type="Label" parent="UIManager/PauseMenu/VBoxContainer2/HBoxContainer1"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UIManager/PauseMenu/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="time" type="Label" parent="UIManager/PauseMenu/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="UIManager/PauseMenu/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="time" type="Label" parent="UIManager/PauseMenu/VBoxContainer2/HBoxContainer3"]
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(479, 271)

[connection signal="pressed" from="ButtonHolder/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="ButtonHolder/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="ButtonHolder/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="ButtonHolder/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="ButtonHolder/Logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="ButtonHolder/Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="ButtonHolder/Leaderboard1" to="." method="_on_leaderboard_1_pressed"]
[connection signal="pressed" from="ButtonHolder/Leaderboard2" to="." method="_on_leaderboard_2_pressed"]
[connection signal="pressed" from="ButtonHolder/Leaderboard3" to="." method="_on_leaderboard_3_pressed"]
[connection signal="pressed" from="UIManager/PauseMenu/VBoxContainer/HBoxContainer4/Quit" to="." method="_on_quit_pressed"]
